tests/corpus/vitest_2fail.txt

 RUN  v2.1.5 /home/user/project

 ✓ tests/utils.test.ts (5)
 ❯ tests/auth.test.ts (3)
   × should login with valid credentials
   ✓ should reject invalid password
   × should handle expired tokens
 ✓ tests/api.test.ts (8)

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯ Failed Tests 2 ⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯

 FAIL  tests/auth.test.ts > should login with valid credentials
AssertionError: expected 401 to equal 200

 ❯ tests/auth.test.ts:14:5
     12|   test('should login with valid credentials', async () => {
     13|     const res = await login('a', 'b');
     14|     expect(res.status).toBe(200);
        |     ^
     15|   });

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯ [1/2] ⎯

 FAIL  tests/auth.test.ts > should handle expired tokens
Error: Token validation failed

 ❯ tests/auth.test.ts:28:11

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯ [2/2] ⎯

 Test Files  1 failed | 2 passed (3)
      Tests  2 failed | 14 passed (16)
   Start at  14:23:01
   Duration  2.34s
